--- a/src/styles.css
+++ b/src/styles.css
@@ -5,4 +5,6 @@
     padding: 0;
     box-sizing: border-box;
     background-color: black;
+    color: white;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
