--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,5 +6,7 @@
     </div>
     <div class="articles__other">
         <app-small-card></app-small-card>
+        <app-small-card></app-small-card>
+        <app-small-card></app-small-card>
     </div>
 </div>
