--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,14 +1,14 @@
 <div class="container__big-card">
     <div class="big-card__photo">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Placeholder_view_vector.svg/681px-Placeholder_view_vector.svg.png"
+        <img src="{{photoCover}}"
             alt="" height="200px">
     </div>
 
     <div class="big-card__title">
-        <h1><a href="\">Saiu uma nova versão do angular</a></h1>
+        <h1><a href="#">{{ cardTitle }}</a></h1>
     </div>
 
     <div class="big-card__description">
-        <p><a href=""> Mussum Ipsum, cacilds vidis litro abertis.  Atirei o pau no gatis, per gatis num morreus. Todo mundo vê os porris que eu tomo, mas ninguém vê os tombis que eu levo! Manduma pindureta quium dia nois paga. Leite de capivaris, leite de mula manquis sem cabeça.</a></p>
+        <p><a href=""> {{ cardDescription }}</a></p>
     </div>
 </div>
