--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -7,11 +7,29 @@
 
 <div class="container__articles">
     <div class="articles__main">
-        <app-big-card></app-big-card>
+        <app-big-card
+            photoCover="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Placeholder_view_vector.svg/681px-Placeholder_view_vector.svg.png"
+            cardTitle = "Novo teste"
+            cardDescription = "Descrição dos dados do big card"
+            >
+        </app-big-card>
+        
     </div>
     <div class="articles__other">
-        <app-small-card></app-small-card>
-        <app-small-card></app-small-card>
-        <app-small-card></app-small-card>
+        <app-small-card
+            cardTitle="Teste Smallcard"
+            photoCover="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Placeholder_view_vector.svg/681px-Placeholder_view_vector.svg.png"
+        >
+        </app-small-card>
+        <app-small-card
+            cardTitle="Teste Smallcard"
+            photoCover="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Placeholder_view_vector.svg/681px-Placeholder_view_vector.svg.png"
+        >
+        </app-small-card>
+        <app-small-card
+            cardTitle="Teste Smallcard"
+            photoCover="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Placeholder_view_vector.svg/681px-Placeholder_view_vector.svg.png"
+        >
+        </app-small-card>
     </div>
 </div>
