--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,30 +1,31 @@
 <app-menu-title></app-menu-title>
 
 <div class="container__articles">
+
     <div class="articles__main">
-        <app-big-card
+        <app-big-card Id="1"
             photoCover="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Placeholder_view_vector.svg/681px-Placeholder_view_vector.svg.png"
-            cardTitle = "Novo teste"
-            cardDescription = "Descrição dos dados do big card"
-            >
+            cardTitle="Novo teste" cardDescription="Descrição dos dados do big card">
         </app-big-card>
-        
+
     </div>
     <div class="articles__other">
-        <app-small-card
-            cardTitle="Teste Smallcard"
-            photoCover="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Placeholder_view_vector.svg/681px-Placeholder_view_vector.svg.png"
-        >
+        <app-small-card 
+            Id="2"
+            cardTitle="Teste Smallcard" 
+            photoCover="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Placeholder_view_vector.svg/681px-Placeholder_view_vector.svg.png">
         </app-small-card>
-        <app-small-card
-            cardTitle="Teste Smallcard"
-            photoCover="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Placeholder_view_vector.svg/681px-Placeholder_view_vector.svg.png"
-        >
+
+        <app-small-card 
+            Id="3"
+            cardTitle="Teste Smallcard" 
+            photoCover="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Placeholder_view_vector.svg/681px-Placeholder_view_vector.svg.png">
         </app-small-card>
-        <app-small-card
+
+        <app-small-card 
+            Id="4"
             cardTitle="Teste Smallcard"
-            photoCover="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Placeholder_view_vector.svg/681px-Placeholder_view_vector.svg.png"
-        >
+            photoCover="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Placeholder_view_vector.svg/681px-Placeholder_view_vector.svg.png">
         </app-small-card>
     </div>
 </div>
